improve readGlskFile method